# xchemlab

./: .gitignore
.devcontainer/: Dockerfile.backend
.github/workflows/: charts.yml  container.yml  schema.yml
backend/: Cargo.toml  router.yaml  supergraph-config.yaml  supergraph-config.yml  supergraph.graphql
backend/accounts/: Cargo.toml
backend/accounts/src/: main.rs
backend/compound_library/: Cargo.toml
backend/compound_library/src/: graphql.rs  main.rs  migrator.rs
backend/compound_soaking/src/: main.rs
backend/fed_accounts/: Cargo.toml
backend/fed_products/: Cargo.toml
backend/fed_reviews/: Cargo.toml
backend/products/: Cargo.toml
backend/products/src/: main.rs
backend/reviews/: Cargo.toml
backend/soak_cmp/: Cargo.toml
backend/soak_compound/: Cargo.toml
backend/soak_compound/src/: graphql.rs  main.rs  migrator.rs  schema.rs
backend/soak_compound/src/entities/: compound_library.rs  compounds.rs  mod.rs  soaked.rs  soaked_well.rs  well_library.rs  wells.rs
backend/soak_compound/src/migrator/: soaked.rs  wells.rs
backend/soak_compound/src/resolvers/: compound.rs  compound_lib_res.rs  mod.rs  soaked.rs  soaked_well_res.rs  well_lib_res.rs  wells.rs
backend/soak_old/: Cargo.toml
backend/soak_old/src/: schema.rs
backend/soak_old/src/entities/: prelude.rs
backend/soak_old/src/migrator/: compounds.rs  mod.rs
backend/soak_table/: Cargo.toml
charts/xchemlab/: Chart.yaml  application-secret-sealed.yaml  init.sql  pgpool-secret-sealed.yaml  postgres-secret-sealed.yaml  values.yaml
policies/: soak_compound.rego
(+53 files in other folders)
