[package]
name = "products"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio ={ workspace = true }
graphql_endpoints = { path = "../graphql_endpoints" }
async-graphql ={ workspace = true }
axum = { workspace = true }
sea-orm ={ workspace = true, features = ["sqlx-postgres"]}