[package]
name = "soak_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm ={ workspace = true, features = ["sqlx-postgres"]}
axum = { workspace = true }
tokio ={ workspace = true }
sea-orm-migration ={ workspace = true }
async-graphql ={ workspace = true }
graphql_endpoints = { path = "../graphql_endpoints" }
dotenvy ={ workspace = true }
clap ={ workspace = true }
opa_client ={ path = "../opa_client", features = ["graphql"]}
url ={ workspace = true }