[package]
name = "soak_compound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { workspace = true, features = ["sqlx-postgres"]}
axum = { workspace = true }
tokio = { workspace = true }
sea-orm-migration = { workspace = true }
rocket = { version = "^0.5.0-rc.2"}
async-graphql = "6.0.4"
async-graphql-rocket = "6.0.4"